@@ -567,3 +567,34 @@ endline()
 	c = getnb();
 	return( (c == '\0' || c == ';') ? 0 : c );
 }
+
+/*)Function	VOID	chop_crlf(str)
+ *
+ *		char	*str		string to chop
+ *
+ *	The function chop_crlf() removes trailing LF or CR/LF from
+ *	str, if present.
+ *
+ *	local variables:
+ *		int	i		string length
+ *
+ *	global variables:
+ *		none
+ *
+ *	functions called:
+ *		none
+ *
+ *	side effects:
+ *		none
+ */
+
+VOID
+chop_crlf(str)
+char *str;
+{
+	register int i;
+
+	i = strlen(str);
+	if (i >= 1 && str[i-1] == '\n') str[i-1] = 0;
+	if (i >= 2 && str[i-2] == '\r') str[i-2] = 0;
+}
